feat: implements teacher endpoint
